--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
     font-family: 'poppins', sans-serif;
     background-color: var(--bg);
     color: #fff;
-    min-height: 5000px;
 }
 
 /* Navbar */
@@ -393,6 +392,10 @@ footer .credit a {
 
     .contact .row {
         flex-wrap: wrap;
+        height: 65rem;
+    }
+
+    .contact .row .map {
         height: 30rem;
     }
 
